fix: new div for collapse

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -6,4 +6,13 @@
     justify-content: center;
     align-items: center;
     gap: 30px;
+
+    .collapse-list{
+        width: 1023px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+    }
 }
